--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <!-- Template Main CSS File -->
     <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
     <!------------------------------------------->
-    <title>React App</title>
+    <title>KrishnaHome</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
